--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
         <div>
           <div><img src="./image/logo@2x.png"></div>  
+          <nav>
+            <ul>efrvvv
+                <li>About</li>
+                <li>Services</li>
+                <li>Blog</li>
+                <li>Projects</li>
+             
+            </ul>
+          </nav>
         </div>
     </header>
 </body>
