--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <nav>
             <ul>efrvvv
                 <li>About</li>
-                <li>Services</li>
+                <li>Service</li>
                 <li>Blog</li>
                 <li>Projects</li>
              
