--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
         <div>
           <div><img src="./image/logo@2x.png"></div>  
           <nav>
-            <ul>efrvvv
+            <ul>
                 <li>About</li>
-                <li>Serghngngfngfngdnvice</li>
-                <li>Blog+
-                  206215041fdsgbfrnjkbglfsnbfs   8328367582
-                </li>
+                <li>Service</li>
+                <li>Blog</li>
                 <li>Projects</li>
              
             </ul>
