--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="one-container">
           <div><img src="./image/logo@2x.png"></div>  
           <nav>
             <ul>
+              <li>HomePage</li>
                 <li>About</li>
                 <li>Service</li>
                 <li>Blog</li>
                 <li>Projects</li>
-             
+                <li>Contacts</li>
             </ul>
           </nav>
         </div>
