--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
                 <li>Contacts</li>
             </ul>
           </nav>
+           <div>
+              <ul>
+                <li><i class="fa fa-facebook"></i></li>
+                <li><i class=""></i></li>
+                <li><i class="fa fa-facebook"></i></li>
+              </ul>
+           </div>
         </div>
     </header>
 </body>
