--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <div class="one-container">
-          <div><img src="./image/logo@2x.png"></div>  
+          <div class="logo-img"><img src="./image/logo@2x.png"></div>  
           <nav>
-            <ul>
+            <ul class="nav-lists">
               <li>HomePage</li>
                 <li>About</li>
                 <li>Service</li>
@@ -22,11 +22,11 @@
                 <li>Contacts</li>
             </ul>
           </nav>
-           <div>
-              <ul>
+           <div class="font-icon"> 
+              <ul class="icon-lists">
                 <li><i class="fa fa-facebook"></i></li>
-                <li><i class=""></i></li>
-                <li><i class="fa fa-facebook"></i></li>
+                <li><i class="fa fa-twitter"></i></li>
+                <li><i class="fa fa-instagram"></i></li>
               </ul>
            </div>
         </div>
