--- a/index.html
+++ b/index.html
@@ -32,4 +32,17 @@
         </div>
     </header>
 </body>
+<script>
+  const renderMenu = []
+  const siteMenu={
+    site1:{
+      name:{home},
+      
+    }
+  }
+  
+
+  var header,
+  siteHeader;
+</script>
 </html>
