--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
               <ul class="icon-lists">
                 <li><i class="fa fa-facebook"></i></li>
                 <li><i class="fa fa-twitter"></i></li>
+                  <bdo>aman</bdo>
                 <li><i class="fa fa-instagram"></i></li>
               </ul>
            </div>
@@ -38,7 +39,7 @@
     site1:{
       name:{home},
       
-    }
+    }  
   }
   
 
