--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="logo-img"><img src="./image/logo@2x.png"></div>  
           <nav>
             <ul class="nav-lists">
-              <li>HomePage</li>
+              <li>HomePage  vnbmhjgl,j/li>
                 <li>About</li>
                 <li>Service</li>
                 <li>Blog</li>
