add-new-image-folder

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           <div class="logo-img"><img src="./image/logo@2x.png"></div>  
           <nav>
             <ul class="nav-lists">
-              <li>HomePage  vnbmhjgl,j/li>
-                <li>About</li>
+              <li>HomePage</li>
+                <li>Abofffut</li>
                 <li>Service</li>
                 <li>Blog</li>
                 <li>Projects</li>
@@ -32,17 +32,4 @@
         </div>
     </header>
 </body>
-<script>
-  const renderMenu = []
-  const siteMenu={
-    site1:{
-      name:{home},
-      
-    }  
-  }
-  
-
-  var header,
-  siteHeader;
-</script>
 </html>
