add-header-in-site

--- a/index.html
+++ b/index.html
@@ -11,24 +11,18 @@
 <body>
     <header>
         <div class="one-container">
-          <div class="logo-img"><img src="./image/logo@2x.png"></div>  
-          <nav>
-            <ul class="nav-lists">
-              <li>HomePage</li>
-                <li>Abofffut</li>
-                <li>Service</li>
-                <li>Blog</li>
-                <li>Projects</li>
-                <li>Contacts</li>
-            </ul>
-          </nav>
-           <div class="font-icon"> 
-              <ul class="icon-lists">
-                <li><i class="fa fa-facebook"></i></li>
-                <li><i class="fa fa-twitter"></i></li>
-                <li><i class="fa fa-instagram"></i></li>
-              </ul>
-           </div>
+        <nav>
+          <div class="left-img">
+            <img src="./images/menu.png">
+            <img src="./images/logo.png" class="user-logo">
+          </div>  
+          <div class="right-img">
+            <img src="./images/upload.png">
+            <img src="./images/more.png">
+            <img src="./images/notification.png">
+            <img src="./images/Jack.png" class="user-image">
+          </div>  
+        </nav>
         </div>
     </header>
 </body>
