--- a/index.html
+++ b/index.html
@@ -12,16 +12,25 @@
     <header>
         <div class="one-container">
         <nav>
+           <div class="flex-display">
           <div class="left-img">
             <img src="./images/menu.png">
             <img src="./images/logo.png" class="user-logo">
-          </div>  
+          </div> 
+           <div class="middle-img flex-display">
+              <div class="search-box-icon flex-display">
+                <input type="text" placeholder="search">
+                <img src="./images/search.png">
+              </div>
+               <img src="./images/voice-search.png" class="mice-icon">
+           </div> 
           <div class="right-img">
             <img src="./images/upload.png">
             <img src="./images/more.png">
             <img src="./images/notification.png">
             <img src="./images/Jack.png" class="user-image">
-          </div>  
+          </div> 
+          </div> 
         </nav>
         </div>
     </header>
