--- a/index.html
+++ b/index.html
@@ -34,5 +34,17 @@
         </nav>
         </div>
     </header>
+    <div class="side-bar">
+        <div class="shortcut-links">
+           <a href=""><img src="./images/home.png" alt="Home"><p>Home</p></a>
+           <a href=""><img src="./images/explore.png" alt="Home"><p>Explore</p></a>
+           <a href=""><img src="./images/subscriprion.png" alt="Home"><p>Subscriprion</p></a>
+           <a href=""><img src="./images/library.png" alt="Home"><p>Library</p></a>
+           <a href=""><img src="./images/history.png" alt="Home"><p>History</p></a>
+           <a href=""><img src="./images/playlist.png" alt="Home"><p>Playlist</p></a>
+           <a href=""><img src="./images/messages.png" alt="Home"><p>Messages</p></a>
+           <hr>
+        </div>
+    </div>
 </body>
 </html>
