add-new-file-script

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
            <a href=""><img src="./images/messages.png" alt="Home"><p>Messages</p></a>
            <hr>
         </div>
+        <div class="subscribed">
+          <h3>SUBSCRIBED</h3>
+          <a href=""><img src="./images/Jack.png"><p>Aman kaushik</p></a>
+          <a href=""><img src="./images/tom.png"><p>Tom Hardy</p></a>
+          <a href=""><img src="./images/cameron.png"><p>Cameron</p></a>
+          <a href=""><img src="./images/simon.png"><p>Simon Commisson</p></a>
+          <a href=""><img src="./images/megan.png"><p>Meggan horley</p></a>
+        </div>
     </div>
 </body>
 </html>
