done-with-front-page

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <nav>
            <div class="flex-display">
           <div class="left-img">
-            <img src="./images/menu.png">
+            <img src="./images/menu.png" class="menu-icon">
             <img src="./images/logo.png" class="user-logo">
           </div> 
            <div class="middle-img flex-display">
               <div class="search-box-icon flex-display">
                 <input type="text" placeholder="search">
-                <img src="./images/search.png">
+                <img src="./images/search.png" class="search">
               </div>
                <img src="./images/voice-search.png" class="mice-icon">
            </div> 
@@ -34,7 +34,7 @@
         </nav>
         </div>
     </header>
-    <div class="side-bar">
+    <div class="sidebar">
         <div class="shortcut-links">
            <a href=""><img src="./images/home.png" alt="Home"><p>Home</p></a>
            <a href=""><img src="./images/explore.png" alt="Home"><p>Explore</p></a>
@@ -54,5 +54,106 @@
           <a href=""><img src="./images/megan.png"><p>Meggan horley</p></a>
         </div>
     </div>
+
+    <!-- ----main content---- -->
+
+    <div class="container">
+      <div class="banner">
+        <img src="./images/banner.png">
+      </div>
+
+      <div class="list-container">
+        <div class="vid-list">
+          <a href=""><img src="./images/thumbnail1.png" class="thumbnail"></a>
+            <div class="flex-display">
+              <img src="./images/Jack.png">
+              <div class="vid-info">
+                <a href="">My new video song come out,please watch it.</a>
+                <p>A-Series</p>
+                <p>100B Views &bull; 10 Days</p>
+              </div>
+            </div>
+        </div>
+        <div class="vid-list">
+          <a href=""><img src="./images/thumbnail2.png" class="thumbnail"></a>
+            <div class="flex-display">
+              <img src="./images/Jack.png">
+              <div class="vid-info">
+                <a href="">My new video song come out,please watch it.</a>
+                <p>A-Series</p>
+                <p>100B Views &bull; 10 Days</p>
+              </div>
+            </div>
+        </div>
+        <div class="vid-list">
+          <a href=""><img src="./images/thumbnail3.png" class="thumbnail"></a>
+            <div class="flex-display">
+              <img src="./images/Jack.png">
+              <div class="vid-info">
+                <a href="">My new video song come out,please watch it.</a>
+                <p>A-Series</p>
+                <p>100B Views &bull; 10 Days</p>
+              </div>
+            </div>
+        </div>
+        <div class="vid-list">
+          <a href=""><img src="./images/thumbnail4.png" class="thumbnail"></a>
+            <div class="flex-display">
+              <img src="./images/Jack.png">
+              <div class="vid-info">
+                <a href="">My new video song come out,please watch it.</a>
+                <p>A-Series</p>
+                <p>100B Views &bull; 10 Days</p>
+              </div>
+            </div>
+        </div>
+        <div class="vid-list">
+          <a href=""><img src="./images/thumbnail5.png" class="thumbnail"></a>
+            <div class="flex-display">
+              <img src="./images/Jack.png">
+              <div class="vid-info">
+                <a href="">My new video song come out,please watch it.</a>
+                <p>A-Series</p>
+                <p>100B Views &bull; 10 Days</p>
+              </div>
+            </div>
+        </div>
+        <div class="vid-list">
+          <a href=""><img src="./images/thumbnail6.png" class="thumbnail"></a>
+            <div class="flex-display">
+              <img src="./images/Jack.png">
+              <div class="vid-info">
+                <a href="">My new video song come out,please watch it.</a>
+                <p>A-Series</p>
+                <p>100B Views &bull; 10 Days</p>
+              </div>
+            </div>
+        </div>
+        <div class="vid-list">
+          <a href=""><img src="./images/thumbnail7.png" class="thumbnail"></a>
+            <div class="flex-display">
+              <img src="./images/Jack.png">
+              <div class="vid-info">
+                <a href="">My new video song come out,please watch it.</a>
+                <p>A-Series</p>
+                <p>100B Views &bull; 10 Days</p>
+              </div>
+            </div>
+        </div>
+        <div class="vid-list">
+          <a href=""><img src="./images/thumbnail8.png" class="thumbnail"></a>
+            <div class="flex-display">
+              <img src="./images/Jack.png">
+              <div class="vid-info">
+                <a href="">My new video song come out,please watch it.</a>
+                <p>A-Series</p>
+                <p>100B Views &bull; 10 Days</p>
+              </div>
+            </div>
+        </div>
+      </div>
+
+    </div>
 </body>
+<script src="./script.js"></script>
 </html>
