--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
       <div class="list-container">
         <div class="vid-list">
-          <a href=""><img src="./images/thumbnail1.png" class="thumbnail"></a>
+          <a href="./video.html"><img src="./images/thumbnail1.png" class="thumbnail"></a>
             <div class="flex-display">
               <img src="./images/Jack.png">
               <div class="vid-info">
-                <a href="">My new video song come out,please watch it.</a>
+                <a href="./video.html">My new video song come out,please watch it.</a>
                 <p>A-Series</p>
                 <p>100B Views &bull; 10 Days</p>
               </div>
