add-videos-play-video

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <div class="list-container">
         <div class="vid-list">
-          <a href="./video.html"><img src="./images/thumbnail1.png" class="thumbnail"></a>
+          <a href="./video.html"><img src="./images/chan.jpg" class="thumbnail"></a>
             <div class="flex-display">
               <img src="./images/Jack.png">
               <div class="vid-info">
