--- a/video.html
+++ b/video.html
@@ -57,7 +57,59 @@
             <a href=""><img src="./images/save.png">save</a>
           </div>
          </div>
+         <hr>
+         <div class="publisher">
+          <img src="./images/logo.jpg">
+          <div>
+            <p>A-Series</p>
+            <span>120M Subscribers</span>
+          </div>
+          <button type="button">Subscribe</button>
+         </div>
+         <div class="vid-descripition">
+          <p>Listen Some Entertaining Songs Here.</p>
+          <p>Subscribe my channels to listen more songs for here.</p>
+          <hr>
+          <h4>100 Commenmts</h4>
+          <div class="add-comment">
+            <img src="./images/Jack.png">
+            <input type="text" placeholder="comments">
+          </div>
+          <div class="old-comments">
+            <img src="./images/Jack.png">
+            <div>
+              <h3>Anuj Sharma <span>2 days ago</span></h3>
+              <p>I Love this song very much.Please sings more songs.<br>Amazing design! I'm using React and 
+                Firebase to turn this into a fully functional clone!</p>
+                <div class="comment-action">
+                  <img src="./images/like.png">
+                  <span>200</span>
+                  <img src="./images/dislike.png">
+                  <span>0</span>
+                  <span>REPLY</span>
+                  <a href="">ALL REPLIES</a>
+                </div>
+            </div>
+          </div>
+          <div class="old-comments">
+            <img src="./images/Jack.png">
+            <div>
+              <h3>Abhishek Kaiya <span>2 days ago</span></h3>
+              <p>I Love this song very much.Please sings more songs.<br>Amazing design! I'm using React and 
+                Firebase to turn this into a fully functional clone!</p>
+                <div class="comment-action">
+                  <img src="./images/like.png">
+                  <span>200</span>
+                  <img src="./images/dislike.png">
+                  <span>0</span>
+                  <span>REPLY</span>
+                  <a href="">ALL REPLIES</a>
+                </div>
+            </div>
+          </div>
+         </div>
       </div>
+      
       <div class="sidebar-video">
         <div class="side-vdo-list">
           <img src="./images/thumbnailrone.jpg">
