add-new-file-add-slider

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <title>Document</title>
     <link rel="stylesheet" href="./style.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body onload="myfunction()">
-  <div id="pageloader">
-  </div>
+  <!-- <div id="pageloader">
+  </div> -->
 
     <header>
         <div class="one-container">
@@ -59,15 +60,17 @@
     </div>
 
     <!-- -----musiv---- -->
+    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/9J2Smg6j0pw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/9J2Smg6j0pw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/9J2Smg6j0pw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/9J2Smg6j0pw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/9J2Smg6j0pw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    -->
+    
 
     <!-- ----main content---- -->
 
     <div class="container">
       <div class="banner">
+        <img src="./images/banner.png">
+        <img src="./images/banner.png">
         <img src="./images/banner.png">
       </div>
 
@@ -84,7 +87,7 @@
             </div>
         </div>
         <div class="vid-list">
-          <a href=""><img src="./images/thumbnail2.png" class="thumbnail"></a>
+          <a href="video2.html"><img src="./images/thumbnail2.png" class="thumbnail"></a>
             <div class="flex-display">
               <img src="./images/Jack.png">
               <div class="vid-info">
