--- a/video.html
+++ b/video.html
@@ -38,8 +38,7 @@
    <div class="container play-container-vdo">
     <div class="row">
       <div class="play-video">
-        <video controls autoplay>
-          <source src="./images/chan.mp4.mp4" type="video/mp4">
+        <video  src="./images/chan.mp4.mp4" type="video/mp4" muted class="video" loop controls>
         </video>
       
         <div class="tags">
