--- a/video2.html
+++ b/video2.html
@@ -33,7 +33,10 @@
         </nav>
         </div>
     </header>
-    
+     
+
+
+
    <div class="container play-container-vdo">
     <div class="row">
       <div class="play-video">
@@ -178,4 +181,7 @@
     </div>
    </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="./script.js"></script>
 </html>
