--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
     </div>
 
     <!-- -----musiv---- -->
-    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/9J2Smg6j0pw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9J2Smg6j0pw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/9J2Smg6j0pw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    
-     -->
+    
 
     <!-- ----main content---- -->
 
