proper-add-loader

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css"/>
 </head>
-<body >
-  <!-- <div id="pageloader">
-  </div> -->
+<body onload="myfunction()">
+  <div id="pageloader">
+  </div>
 
     <header>
         <div class="one-container">
