--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="./style.css"/>
 </head>
 <body onload="myfunction()">
-  <div id="pageloader">
-  </div>
+  <!-- <div id="pageloader">
+  </div> -->
 
     <header>
         <div class="one-container">
@@ -32,7 +32,7 @@
             <div class="dropdown">
               <img src="./images/upload.png">
               <div id="dropmenu">
-                <a href="">Upload Video</a>
+                <a href="./upload.html">Upload Video</a>
               </div>
             </div>
            
