--- a/index.html
+++ b/index.html
@@ -29,16 +29,27 @@
                <img src="./images/voice-search.png" class="mice-icon">
            </div> 
           <div class="right-img">
+            <div class="responsive">
             <div class="dropdown">
               <img src="./images/upload.png">
               <div class="un-dorp">
                 <a href="./upload.html">Upload Video</a>
+                <a href="#"><img src="./images/"></a>
               </div>
-            </div>
-           
+           </div>
             <img src="./images/more.png">
             <img src="./images/notification.png">
+          </div>
+            <div class="notify-drop">
             <img src="./images/Jack.png" class="user-image">
+            <div class="drop-img">
+              <img src="./images/upload.png">
+              <h1 class="upload">Upload video</h1>
+              <div id="dark-btn">
+                <span></span>
+             </div>
+            </div>
+            </div>
           </div> 
           </div> 
         </nav>
